--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@
     _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
 
 </script>
+</html>
