--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
 
 </script>
-<h1>Hello World</h1>
+<h1>Test Mining Page</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
